# gtrend-rs

./: Cargo.toml  README.md
examples/: simple_request.rs
src/: error.rs  lib.rs  trends_client.rs
src/enums/: category.rs  country.rs  lang.rs  mod.rs  period.rs  property.rs
src/trends_client/: explore_client.rs  geo_map.rs  mod.rs  related_queries.rs  related_topics.rs  timeseries.rs
src/trends_client/widget/: geo_map.rs  mod.rs  related_queries.rs  related_topics.rs  timeseries.rs
tests/: global.rs
