[package]
name = "gtrend-rs"
version = "2.0.0"
edition = "2024"
authors = ["LafCorentin"]
description = "Unofficial client for interacting with Google Trend API"
repository = "https://www.github.com/LafCorentin/gtrend-rs"
license = "Apache-2.0"
keywords = ["google_trend", "trend", "google", "api", "web"]
categories = ["api-bindings"]

[dependencies]
chrono = "0.4.42"
quick-xml = "0.38.4"
reqwest = { version = "0.12.24", features = ["cookies"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }

[profile.release]
lto = true
